5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1834_1276.log
== TEST (2019-06-30 14:01:39) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("")))
#contar as linhas
s=m.shape[1]
#contador
d=0
for i in range(s):
	d=d+m[i,:]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 14:02:02) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("")))
#contar as linhas
s=m.shape[0]
#contador
d=0
for i in range(s):
	d=d+m[i,:]
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 14:04:04) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("")))
#contar as linhas
s=m.shape[0]
#contador
d=0
e=1
for i in range(s):
	d=d+m[i,:]

for i in range(d):
	if(d==max(d)):
		e=e+1
		print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 14:04:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("")))
#contar as linhas
s=m.shape[0]
#contador
d=0
e=1
for i in range(s):
	d=d+m[i,:]

for i in range(s):
	if(d==max(d)):
		e=e+1
		print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 14:04:35) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("")))
#contar as linhas
s=m.shape[0]
#contador
d=0
e=1
for i in range(s):
	d=d+m[i,:]

for i in range(s):
	if(d>=max(d)):
		e=e+1
		print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 14:09:20) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("")))
#contar as linhas
s=m.shape[0]
#contador
d=0
e=1
for i in range(s):
	d=d+m[i,:]

for i in range(s):
	if(d[i]>=max(d)):
		e=e+1
		print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 14:09:28) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("")))
#contar as linhas
s=m.shape[0]
#contador
d=0
e=0
for i in range(s):
	d=d+m[i,:]

for i in range(s):
	if(d[i]>=max(d)):
		e=e+1
		print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 14:09:36) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("")))
#contar as linhas
s=m.shape[0]
#contador
d=0
e=0
for i in range(s):
	d=d+m[i,:]

for i in range(s):
	if(d[i]>=max(d)):
		e=e+1
		print(e)
-- EXECUTION TIME:
1.23802
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
1
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
1
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 14:09:55) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("")))
#contar as linhas
s=m.shape[0]
#contador
d=0
e=0
for i in range(s):
	d=d+m[i,:]

for i in range(s):
	if(d[i]>=max(d)):
		print(e+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 14:10:21) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("")))
#contar as linhas
s=m.shape[0]
#contador
d=0
e=0
for i in range(s):
	d=d+m[i,:]

for i in range(s):
	if(d[i]>=max(d)):		
		print(i+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 14:10:28) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("")))
#contar as linhas
s=m.shape[0]
#contador
d=0
e=0
for i in range(s):
	d=d+m[i,:]

for i in range(s):
	if(d[i]>=max(d)):		
		print(i+1)
-- EXECUTION TIME:
0.998254
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 14:10:40) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("")))
#contar as linhas
s=m.shape[0]
#contador
d=0
for i in range(s):
	d=d+m[i,:]

for i in range(s):
	if(d[i]>=max(d)):		
		print(i+1)
-- EXECUTION TIME:
0.855129
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 14:10:45) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("")))
#contar as linhas
s=m.shape[0]
#contador
d=0
for i in range(s):
	d=d+m[i,:]

for i in range(s):
	if(d[i]>=max(d)):
		print(i+1)
-- EXECUTION TIME:
0.975834
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 14:12:14) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("")))
#contar as linhas
s=m.shape[0]
#contador
d=0
for i in range(s):
	d=sum(m[i,:])
for i in range(s):
	if(d[i]>=max(d)):
		print(i+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 14:12:36) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("")))
#contar as linhas
s=m.shape[0]
#contador
d=0
for i in range(s):
	d=sum(m[i,:])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 14:12:41) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("")))
#contar as linhas
s=m.shape[0]
#contador
d=0
for i in range(s):
	d=sum(m[i,:])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 14:12:47) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("")))
#contar as linhas
s=m.shape[0]
#contador
d=0
for i in range(s):
	d=sum(m[i,:])
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 14:12:57) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("")))
#contar as linhas
s=m.shape[0]
#contador

for i in range(s):
	d=sum(m[i,:])
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 14:13:16) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("")))
#contar as linhas
s=m.shape[0]
#contador
d=0
for i in range(s):
	d[i=sum(m[i,:])
print(d)
-- ERROR:
File "XXXX", line 9
    d[i=sum(m[i,:])
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 14:13:20) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("")))
#contar as linhas
s=m.shape[0]
#contador
d=0
for i in range(s):
	d[i]=sum(m[i,:])
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 14:14:59) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("")))
#contar as linhas
s=m.shape[0]
#contador
d=zeros(z,dtype=int)
for i in range(7):
	d[i]=sum(m[i,:])
for i in range(s):
	if(d[i]>=max(d)):
		print(i+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 14:15:07) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("")))
#contar as linhas
s=m.shape[0]
#contador
d=zeros(7,dtype=int)
for i in range(7):
	d[i]=sum(m[i,:])
for i in range(s):
	if(d[i]>=max(d)):
		print(i+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 14:15:19) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("")))
#contar as linhas
s=m.shape[0]
#contador
d=zeros(7,dtype=int)
for i in range(7):
	d[i]=sum(m[:,i])
for i in range(s):
	if(d[i]>=max(d)):
		print(i+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 14:15:29) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("")))
#contar as linhas

#contador
d=zeros(7,dtype=int)
for i in range(7):
	d[i]=sum(m[:,i])
for i in range(s):
	if(d[i]>=max(d)):
		print(i+1)
-- EXECUTION TIME:
1.20282
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/1276/main.py", line 10, in <module>
    for i in range(s):
NameError: name 's' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 14:15:32) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("")))
#contar as linhas

#contador
d=zeros(7,dtype=int)
for i in range(7):
	d[i]=sum(m[:,i])
for i in range(s):
	if(d[i]>=max(d)):
		print(i+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 14:15:44) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("")))
#contar as linhas

#contador
d=zeros(7,dtype=int)
for i in range(7):
	d[i]=sum(m[:,i])
for i in range(7):
	if(d[i]>=max(d)):
		print(i+1)
-- EXECUTION TIME:
1.04321
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 15:50:37) 
-- CODE:
from numpy import*
from numpy.linalg import*
m=array(eval(input("")))
#contar as linhas

#contador
d=zeros(7,dtype=int)
for i in range(7):
	d[i]=sum(m[:,i])
	print(d)
for i in range(7):
	if(d[i]>=max(d)):
		print(i+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
